path-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: path-ingress
spec:
  rules:
  - host: bandicoot.example.com
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bandicoot
            port:
              number: 8080
      - path: "/a/"
        pathType: Prefix
        backend:
          service:
            name: alpaca
            port:
              number: 8080
